[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/battle/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/battle/player/main-character-sprite-sheet.png" type="Texture" id=2]
[ext_resource path="res://src/battle/player/idle.gd" type="Script" id=3]
[ext_resource path="res://src/battle/player/moving.gd" type="Script" id=4]
[ext_resource path="res://src/battle/player/staggered.gd" type="Script" id=5]
[ext_resource path="res://src/battle/player/casting.gd" type="Script" id=6]
[ext_resource path="res://src/battle/joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/battle/player/camera.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.81673
height = 7.89209

[sub_resource type="Animation" id=4]
resource_name = "idle_back"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_front"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_back"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_front"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_front"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_back"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk_front"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_back"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/idle_animations/node = SubResource( 16 )
states/idle_animations/position = Vector2( 467, 119 )
states/walk_animations/node = SubResource( 21 )
states/walk_animations/position = Vector2( 749, 119 )
transitions = [ "idle_animations", "walk_animations", SubResource( 22 ), "walk_animations", "idle_animations", SubResource( 23 ) ]
start_node = "idle_animations"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="player_sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 48
frame = 40

[node name="movement_collider" type="CollisionShape2D" parent="."]
position = Vector2( -2.29341, 10.695 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="stagger_timer" type="Timer" parent="."]

[node name="movement_animator" type="AnimationPlayer" parent="."]
anims/idle_back = SubResource( 4 )
anims/idle_front = SubResource( 5 )
anims/idle_left = SubResource( 6 )
anims/idle_right = SubResource( 7 )
anims/walk_back = SubResource( 8 )
anims/walk_front = SubResource( 9 )
anims/walk_left = SubResource( 10 )
anims/walk_right = SubResource( 11 )

[node name="animation_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../movement_animator")
active = true
parameters/playback = SubResource( 25 )
parameters/idle_animations/blend_position = Vector2( 0, 0 )
parameters/walk_animations/blend_position = Vector2( 0, 0 )

[node name="states" type="Node" parent="."]

[node name="staggered" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="moving" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="idle" type="Node" parent="states"]
script = ExtResource( 3 )

[node name="casting" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="joystick" parent="hud" instance=ExtResource( 7 )]
position = Vector2( 224.211, 438.947 )

[node name="camera_eye" type="Position2D" parent="."]
script = ExtResource( 8 )

[node name="camera" type="Camera2D" parent="camera_eye"]
current = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
[connection signal="timeout" from="stagger_timer" to="." method="_on_stagger_timer_timeout"]
